cabal-version: 3.0
name: saturn
version: 1.1.0.4
synopsis: Handle POSIX cron schedules.
description: Saturn handles POSIX cron schedules.
build-type: Simple
category: Cron
extra-doc-files:
  CHANGELOG.md
  README.md

maintainer: Taylor Fausak
license: MIT
license-file: LICENSE.txt

source-repository head
  location: https://github.com/tfausak/saturn
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>={4.19, 4.20, 4.21, 4.22}
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

library
  import: library
  build-depends:
    QuickCheck ^>={2.14.3, 2.15, 2.16, 2.17},
    containers ^>={0.6.7, 0.7, 0.8},
    heck ^>={0.2025.5.22, 1},
    hspec ^>=2.11.8,
    parsec ^>=3.1.16.1,
    text ^>={2.0.2, 2.1},
    time ^>={1.12.2, 1.14, 1.15},

  -- cabal-gild: discover source/library
  exposed-modules:
    Saturn
    Saturn.Unstable.Constant
    Saturn.Unstable.ConstantSpec
    Saturn.Unstable.Extra.Int
    Saturn.Unstable.Extra.IntSpec
    Saturn.Unstable.Extra.Ord
    Saturn.Unstable.Extra.OrdSpec
    Saturn.Unstable.Extra.Parsec
    Saturn.Unstable.Extra.ParsecSpec
    Saturn.Unstable.Extra.Time
    Saturn.Unstable.Extra.TimeSpec
    Saturn.Unstable.Extra.Tuple
    Saturn.Unstable.Extra.TupleSpec
    Saturn.Unstable.Match
    Saturn.Unstable.MatchSpec
    Saturn.Unstable.Parse
    Saturn.Unstable.ParseSpec
    Saturn.Unstable.Render
    Saturn.Unstable.RenderSpec
    Saturn.Unstable.Type.Day
    Saturn.Unstable.Type.DaySpec
    Saturn.Unstable.Type.Element
    Saturn.Unstable.Type.ElementSpec
    Saturn.Unstable.Type.Field
    Saturn.Unstable.Type.FieldSpec
    Saturn.Unstable.Type.Hour
    Saturn.Unstable.Type.HourSpec
    Saturn.Unstable.Type.Minute
    Saturn.Unstable.Type.MinuteSpec
    Saturn.Unstable.Type.Month
    Saturn.Unstable.Type.MonthSpec
    Saturn.Unstable.Type.Number
    Saturn.Unstable.Type.NumberSpec
    Saturn.Unstable.Type.Range
    Saturn.Unstable.Type.RangeSpec
    Saturn.Unstable.Type.Schedule
    Saturn.Unstable.Type.ScheduleSpec
    Saturn.Unstable.Type.Weekday
    Saturn.Unstable.Type.WeekdaySpec
    Saturn.Unstable.Type.Wildcard
    Saturn.Unstable.Type.WildcardSpec
    SaturnSpec

  hs-source-dirs: source/library

test-suite saturn-test-suite
  import: library
  build-depends:
    heck,
    hspec,
    hspec-core,
    saturn,

  ghc-options:
    -rtsopts
    -threaded

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
